[codex] MVP-03: сессии профиля и аудит доступа админа (#11)
* feat(mvp): добавить сессии профиля и аудит доступа админа

* test(api): выровнять точность registeredAt с БД

* test(api): учитывать округление registeredAt в БД

---------
